# challenges

./: README.md
Python_challenges/: setup.cfg
Python_challenges/Python_challenges/: challenge_1.py  challenge_4.py  challenge_5.py
Python_challenges/Python_challenges.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
Python_challenges/pip-wheel-metadata/Python_challenges.dist-info/: METADATA
