[metadata]
name = Python_challenges
version = 0.0.1

[options]
packages = Python_challenges
install_requires =
    requests
    importlib; python_version == "2.6"

[options.entry_points]
console_scripts =
    challenge-1 = Python_challenges.challenge_1:main
    challenge-5 = Python_challenges.challenge_5:main
    challenge-4 = Python_challenges.challenge_4:main
